--- a/index.html
+++ b/index.html
@@ -1,172 +1,125 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>تحديد الموقع الدقيق</title>
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تحديد موقعك بدقة عالية جدًا</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background: #f0f0f0;
-        }
-        #map {
-            height: 100vh;
-            width: 100%;
-        }
+        body, html { margin:0; padding:0; height:100%; font-family: bold 18px Arial; }
+        #map { width:100%; height:100%; }
         .info {
             position: absolute;
-            top: 10px;
-            left: 50%;
+            top: 15px; left: 50%;
             transform: translateX(-50%);
-            background: rgba(0,0,0,0.7);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 10px;
-            z-index: 1000;
+            background: rgba(0,0,0,0.85);
+            color: #0f0;
+            padding: 15px 30px;
+            border-radius: 20px;
+            z-index: 10000;
             text-align: center;
-            font-size: 16px;
+            box-shadow: 0 0 30px #0f0;
+            min-width: 300px;
         }
-        .loader {
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #3498db;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            margin: 20px auto;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
+        .glow { text-shadow: 0 0 15px #0f0; }
+        .acc { color:#ff0; font-size:22px; margin:10px 0; }
         button {
-            padding: 12px 24px;
-            font-size: 18px;
-            background: #27ae60;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 10px;
+            margin-top:15px;
+            padding:14px 35px;
+            font-size:20px;
+            background:#00ff00;
+            color:#000;
+            border:none;
+            border-radius:50px;
+            cursor:pointer;
+            font-weight:bold;
         }
-        button:hover { background: #219653; }
     </style>
 </head>
 <body>
 
-    <div class="info" id="status">
-        اضغط على الزر لتحديد موقعك بدقة عالية
-        <div class="loader" id="loader" style="display:none;"></div>
-        <br>
-        <button onclick="getLocation()">تحديد موقعي الآن</button>
-        <p id="coords" style="margin-top:10px; font-weight:bold;"></p>
-    </div>
+<div class="info" id="status">
+    <div class="glow">جاري طلب إذن تحديد الموقع...</div>
+    <div class="acc" id="accuracy"></div>
+    <div id="coords"></div>
+    <button onclick="startLocation()">إعادة تحديد الموقع</button>
+</div>
 
-    <div id="map"></div>
+<div id="map"></div>
 
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+    const map = L.map('map').setView([24.7136, 46.6753], 6);
+    L.tileLayer('https://{s.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
 
-    <script>
-        // إعداد الخريطة
-        const map = L.map('map').setView([24.7136, 46.6753], 6); // مركز افتراضي: الرياض
+    let marker, circle;
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
+    function startLocation() {
+        document.getElementById('status').innerHTML = 
+            '<div class="glow">جاري طلب إذن تحديد الموقع...</div>';
 
-        let marker = null;
-        let circle = null;
-
-        function getLocation() {
-            const status = document.getElementById('status');
-            const loader = document.getElementById('loader');
-            const coordsText = document.getElementById('coords');
-
-            if (!navigator.geolocation) {
-                status.innerHTML = "المتصفح لا يدعم تحديد الموقع";
-                return;
-            }
-
-            status.innerHTML = "جاري تحديد الموقع بدقة عالية...";
-            loader.style.display = "block";
-
-            const options = {
-                enableHighAccuracy: true,   // أهم خيار للحصول على دقة عالية
-                timeout: 15000,
-                maximumAge: 0
-            };
-
-            navigator.geolocation.getCurrentPosition(
-                (position) => {
-                    const lat = position.coords.latitude;
-                    const lng = position.coords.longitude;
-                    const accuracy = position.coords.accuracy; // الدقة بالأمتار
-
-                    // تحديث النص
-                    coordsText.innerHTML = `خط العرض: ${lat.toFixed(6)}<br>
-                                           خط الطول: ${lng.toFixed(6)}<br>
-                                           الدقة: ±${accuracy.toFixed(1)} متر`;
-
-                    status.innerHTML = "تم تحديد موقعك بدقة!";
-                    loader.style.display = "none";
-
-                    // تحريك الخريطة للموقع
-                    map.setView([lat, lng], 18);
-
-                    // إزالة العلامة السابقة إن وجدت
-                    if (marker) map.removeLayer(marker);
-                    if (circle) map.removeLayer(circle);
-
-                    // إضافة علامة زرقاء في الموقع
-                    marker = L.marker([lat, lng]).addTo(map)
-                        .bindPopup("<b>أنت هنا!</b><br>دقة: ±" + accuracy.toFixed(1) + " م")
-                        .openPopup();
-
-                    // دائرة توضح نطاق الدقة
-                    circle = L.circle([lat, lng], {
-                        color: 'blue',
-                        fillColor: '#3399ff',
-                        fillOpacity: 0.2,
-                        radius: accuracy
-                    }).addTo(map);
-
-                    // رابط جوجل مابس مباشر
-                    const googleMapsLink = `https://www.google.com/maps?q=${lat},${lng}`;
-                    marker.bindPopup(marker.getPopup().getContent() + `<br><a href="${googleMapsLink}" target="_blank">فتح في جوجل مابس</a>`);
-
-                },
-                (error) => {
-                    loader.style.display = "none";
-                    let message = "";
-                    switch(error.code) {
-                        case error.PERMISSION_DENIED:
-                            message = "تم رفض الإذن تحديد الموقع. الرجاء تفعيل الموقع من إعدادات المتصفح.";
-                            break;
-                        case error.POSITION_UNAVAILABLE:
-                            message = "تعذر تحديد الموقع. جرب في مكان مكشوف أو باستخدام واي فاي.";
-                            break;
-                        case error.TIMEOUT:
-                            message = "انتهت مهلة تحديد الموقع. أعد المحاولة.";
-                            break;
-                        default:
-                            message = "خطأ غير معروف: " + error.message;
-                    }
-                    status.innerHTML = message;
-                    coordsText.innerHTML = "";
-                },
-                options
-            );
+        if (!navigator.geolocation) {
+            document.getElementById('status').innerHTML = 
+                '<div style="color:red">المتصفح لا يدعم تحديد الموقع</div>';
+            return;
         }
 
-        // تحديد الموقع تلقائيًا عند تحميل الصفحة (اختياري)
-        // getLocation();
-    </script>
+        // هذا السطر هو اللي بيطلّع السؤال الرسمي للمتصفح فورًا
+        navigator.geolocation.getCurrentPosition(onSuccess, onError, {
+            enableHighAccuracy: true,   // GPS + Wi-Fi + أبراج الجوال
+            timeout: 20000,
+            maximumAge: 0
+        });
+    }
+
+    function onSuccess(position) {
+        const lat = position.coords.latitude;
+        const lng = position.coords.longitude;
+        const acc = position.coords.accuracy;
+
+        document.getElementById('accuracy').text').innerHTML = `الدقة: ±${acc.toFixed(0)} متر`;
+        document.getElementById('coords').innerHTML = 
+            `${lat.toFixed(7)}<br>${lng.toFixed(7)}`;
+
+        document.getElementById('status').innerHTML = 
+            = `<div class="glow">تم تحديد موقعك بدقة عالية!</div>
+               <div class="acc">الدقة: ±${acc.toFixed(0)} متر</div>
+               <div>${lat.toFixed(7)}<br>${lng.toFixed(7)}</div>
+               <button onclick="startLocation()">تحديث الموقع</button>`;
+
+        map.setView([lat, lng], 18);
+
+        if (marker) map.removeLayer(marker);
+        if (circle) map.removeLayer(circle);
+
+        marker = L.marker([lat, lng]).addTo(map)
+            .bindPopup(`<b>أنت هنا!</b><br>دقة: ±${acc.toFixed(0)} م<br>
+            <a href="https://www.google.com/maps?q=${lat},${lng}" target="_blank">فتح في جوجل مابس</a>`)
+            .openPopup();
+
+        circle = L.circle([lat, lng], {
+            color: '#00ff00',
+            fillColor: '#00ff00',
+            fillOpacity: 0.2,
+            radius: acc
+        }).addTo(map);
+    }
+
+    function onError(err) {
+        let msg = "خطأ غير معروف";
+        if (err.code === 1) msg = "تم رفض إذن الموقع<br>↩️ افتح الإعدادات ← الخصوصية ← الموقع ← اسمح لهذا الموقع";
+        if (err.code === 2) msg = "تعذر تحديد الموقع (جرب مكان مفتوح)";
+        if (err.code === 3) msg = "انتهت المهلة.. أعد المحاولة";
+
+        document.getElementById('status').innerHTML = 
+            `<div style="color:#f66">${msg}</div>
+             <button onclick="startLocation()">إعادة المحاولة</button>`;
+    }
+
+    // أهم سطر: يشتغل فور فتح الصفحة ويطلع السؤال الرسمي للمتصفح
+    window.onload = startLocation;
+</script>
 </body>
 </html>
